[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-modem-cli"

version = "1.0.0"
description = "Easy CLI for interfacing with mobile modems"
readme = "README.md"
keywords = ["modem", "sms", "gsm", "sim", "atcommands"]
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    'typer==0.7.0',
    'sim-modem==1.0.2'
]

[project.scripts]
sim-modem-cli = 'main:app'

[project.urls]
Repository = "https://github.com/jonamat/sim-modem-cli"
